--- a/src/components/ProductsItems.scss
+++ b/src/components/ProductsItems.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    margin: 40px 80px
+    margin: 40px 80px;
 }
 
 .card {
