--- a/src/components/ShoppingCart.scss
+++ b/src/components/ShoppingCart.scss
@@ -4,12 +4,17 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    margin: 40px 80px;
+    margin: 5rem 5rem;
+}
+
+.cart--empty {
+    text-align: center;
 }
 
 .cart--container {
     background-color: aliceblue;
     height: fit-content;
+    min-width: 16.125rem;
     width: fit-content;
     padding: 1rem;
     border-radius: 10px; 
