globo de notificacion

--- a/src/components/ShoppingCart.scss
+++ b/src/components/ShoppingCart.scss
@@ -23,3 +23,12 @@
     right: 1.5rem;
     box-shadow: 3px 3px 12px 2px hsl(157, 95%, 10%) ; 
 }
+
+.cantidadItems {
+    background-color: red;
+    position: absolute;
+    top: 52px;
+    right: 92px;
+    border-radius: 100%;
+    padding: 5px 9px;
+}
