Notificaciones enviadas a Nav - relative a boton carro

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -16,4 +16,20 @@
    @include buttons(aliceblue, 0.62rem, 1.25rem, 1rem);
    padding: 0.62rem, 1.25rem;
    margin: 0px 4.2em;
+   max-height: 37.81px;
+}
+
+.cantidadItems {
+    background-color: rgb(255, 53, 53);
+
+    text-align: center;
+    max-width: 15px;
+    font-size: 12px;
+    position: relative;
+    top: -40px;
+    right: 40px;
+    border: 1px rgb(255, 53, 53) solid;
+    border-radius: 100%;
+    padding: 6px 6px;
+    box-shadow: 1px 1px 3px rgba(0,0,0, 0.5);
 }
