--- a/src/components/ShoppingCart.scss
+++ b/src/components/ShoppingCart.scss
@@ -25,10 +25,16 @@
 }
 
 .cantidadItems {
-    background-color: red;
-    position: absolute;
-    top: 52px;
-    right: 92px;
+    background-color: rgb(255, 53, 53);
+
+    text-align: center;
+    max-width: 15px;
+    font-size: 12px;
+    position: relative;
+    top: -40px;
+    right: 40px;
+    border: 1px rgb(255, 53, 53) solid;
     border-radius: 100%;
-    padding: 5px 9px;
+    padding: 6px 6px;
+    box-shadow: 1px 1px 3px rgba(0,0,0, 0.5);
 }
