--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -3,6 +3,7 @@
 
 .nav--container {
     display: flex;
+    width: 100vw;
     justify-content: space-between;
     align-items: center;
     margin: 0;
@@ -15,7 +16,7 @@
 .btn--carro {
    @include buttons(aliceblue, 0.62rem, 1.25rem, 1rem);
    padding: 0.62rem, 1.25rem;
-   margin: 0;
+   margin: 0 20px;
    max-height: 37.81px;
 
 }
@@ -32,4 +33,11 @@
     border-radius: 100%;
     padding: 6px 6px;
     box-shadow: 1px 1px 3px rgba(0,0,0, 0.5);
+}
+
+.logo {
+    width: 120px;
+    height: auto;
+    margin: 10px 0;
+    cursor: pointer;
 }
