--- a/src/components/ShoppingCart.scss
+++ b/src/components/ShoppingCart.scss
@@ -7,12 +7,12 @@
 }
 
 .card--container {
-/*     display: flex;
+    width: 100%;
+    display: flex;
     justify-content: center;
     text-align: center;
-    margin: 5rem 5rem; */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    margin: 5rem 5rem; 
+    flex-wrap: wrap;
     gap: 2rem;
     text-align: center;
 }
