--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -4,7 +4,7 @@
 .nav--container {
     display: flex;
     width: 100vw;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: 0;
     padding: 10px 25px;
