--- a/src/components/ProductsItems.scss
+++ b/src/components/ProductsItems.scss
@@ -2,9 +2,12 @@
 @import '../scss/variables';
 
 .card {
-    margin: 10px;
-    padding: 10px;
     background-color: #fff;
+    width: auto;
+    max-width: 20rem;
+    min-width: 20rem;
+    height: auto;
+    padding: 10px;
     border-radius: 6px;
     border: 1px solid $primary;
     box-shadow: 5px 7px 8px rgba(0,0,0,0.5);
@@ -14,7 +17,8 @@
 }
 
 .card--img {
-    height: 180px;
+    height: 11.25rem;
+    width: auto;
     border-radius: 4px;
     border: 1px solid rgba(0,0,0, 0.2);
 }
