--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -17,6 +17,7 @@
    @include buttons(aliceblue, 0.62rem, 1.25rem, 1rem);
    padding: 0.62rem, 1.25rem;
    height: 2.5rem;
+   margin: 0 1rem;
 }
 
 .cantidadItems {
